# Ecomeristem_2

./: .gitignore  Ecomeristem.pro
data/: dump2.sql
data/sample/: ecoparams.rdf  meteo.rdf
data/sampleNG/: ECOMERISTEM_parameters.txt  meteo_ETP.txt
doc/: Phenology.pptx
doc/NG/: EntityInternode_ng.pas  EntityLeaf_ng.pas  EntityPanicle_ng.pas  EntityPeduncle_ng.pas  EntityTillerPhytomer_ng.pas  ManagerMeristem_ng.pas  ModuleMeristem_ng.pas  s0DSd25400.ets
doc/le/: EntityInternode_LE.pas  EntityLeaf_LE.pas  EntityPanicle_LE.pas  EntityPeduncle_LE.pas  EntityTillerPhytomer_LE.pas  EntityTiller_LE.pas  ManagerMeristem_LE.cpp  ManagerMeristem_LE.h  ManagerMeristem_LE.pas  ModuleMeristem_LE.pas
doc/manager/interne/: ManagerMeristem_LE.pas  managerMeristem.pas
doc/module/interne/: ModuleMeristem.pas  ModuleMeristem_LE.pas
doc/old/: EntityRoot.pas  EntityTiller.pas  ModuleMeristem.pas
doc/sample/: meteo_ETP.txt  meteo_PAR.txt  meteo_T.txt
doc/sample/ref/: AreaLFEL_out.txt  CGRStress_out.txt  DD_out.txt  DWLFEL_out.txt  ECOMERISTEM_parameters.txt  EDD_out.txt  IH_out.txt  Ic_mainstem_out.txt  Ic_out.txt  LAI_out.txt  PHT_out.txt  PLA_out.txt  R_d_out.txt  (+66 more)
src/: ModelParameters.hpp  SampleAtomicModel.hpp  defines.hpp  main.cpp
src/observer/: PlantView.hpp
src/plant/: CulmModel.hpp  PlantModel.cpp  PlantModel.hpp  PlantState.cpp  PlantState.hpp  RootModel.hpp  plantmanager.h
src/plant/processes/assimilation/: Assim.hpp  AssimPot.hpp  CMakeLists.txt  Interc.hpp  Lai.hpp  PlantAssimilationModel.cpp  PlantAssimilationModel.hpp  RespMaint.hpp
src/plant/processes/stock/: CMakeLists.txt  DayDemand.hpp  IndexCompetition.hpp  PlantStock.hpp  PlantStockModel.cpp  PlantStockModel.hpp  PlantSupply.hpp  ReservoirDispo.hpp  SeedRes.hpp  StockSurplus.hpp
src/plant/processes/thermal-time/: CMakeLists.txt  DD.hpp  DeltaT.hpp  IH.hpp  LiguloVisu.hpp  PhenoStage.hpp  PlastoVisu.hpp  TT.hpp  TT_lig.hpp  ThermalTimeModel.hpp.autosave
src/plant/processes/water-balance/: CMakeLists.txt  FTSW.hpp  SWC.hpp  WaterBalanceModel.cpp  WaterBalanceModel.hpp  cstr.hpp  fcstr.hpp  transpiration.hpp
src/qtapp/: mainwindow.cpp  mainwindow.h  mainwindow.ui  meteodatamodel.cpp  meteodatamodel.h  parametersdatamodel.cpp  parametersdatamodel.h  tracemodel.cpp  tracemodel.h  view.cpp  view.h
src/utils/: Connections.cpp  Connections.hpp  ParametersReader.cpp  ParametersReader.hpp  resultparser.cpp  resultparser.h
(+78 files in other folders)
