INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_PLANT_ASSIMILATION_HPP Assim.hpp AssimPot.hpp Interc.hpp
  Lai.hpp Model.hpp RespMaint.hpp)

SET(ECOMERISTEM_PLANT_ASSIMILATION_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-plant-assimilation SHARED ${ECOMERISTEM_PLANT_ASSIMILATION_HPP} ${ECOMERISTEM_PLANT_ASSIMILATION_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-plant-assimilation)

INSTALL(TARGETS ecomeristem-plant-assimilation DESTINATION lib)
