INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_PLANT_WATER_BALANCE_HPP cstr.hpp FTSW.hpp fcstr.hpp Model.hpp
  SWC.hpp transpiration.hpp)

SET(ECOMERISTEM_PLANT_WATER_BALANCE_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-plant-water-balance SHARED ${ECOMERISTEM_PLANT_WATER_BALANCE_HPP} ${ECOMERISTEM_PLANT_WATER_BALANCE_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-plant-water-balance)

INSTALL(TARGETS ecomeristem-plant-water-balance DESTINATION lib)
